# python-project-49

./: ()  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml
brain_games/: Makefile  cli.py  const_file.py  launcher.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py
hexlet_games/: cli.py  launcher.py
hexlet_games/scripts/: brain_even.py  brain_games.py
