[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "hexlet-games"
authors = ["darkwolf <darkwolf1990janary@gmail.com>"]
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
  { include = "hexlet_games" },
]


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "hexlet_games.scripts.brain_games:main"
brain-even = "hexlet_games.scripts.brain_even:main"
brain-calc = "hexlet_games.scripts.brain_calc:main"
brain-gcd = "hexlet_games.scripts.brain_gcd:main"
brain-progression = "hexlet_games.scripts.brain_progression:main"
brain-prime = "hexlet_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
